src/test/ui/unsized/unsized-enum2.stderr
error[E0277]: the size for values of type `W` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:23:8
   |
LL |     VA(W),
   |        ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `W`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where W: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:25:8
   |
LL |     VB{x: X},
   |        ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `Y` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:27:15
   |
LL |     VC(isize, Y),
   |               ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Y`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Y: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `Z` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:29:18
   |
LL |     VD{u: isize, x: Z},
   |                  ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Z`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Z: std::marker::Sized` bound
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:33:8
   |
LL |     VE([u8]),
   |        ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:35:8
   |
LL |     VF{x: str},
   |        ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[f32]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:37:15
   |
LL |     VG(isize, [f32]),
   |               ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[f32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:39:18
   |
LL |     VH{u: isize, x: [u32]},
   |                  ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn Foo + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:53:8
   |
LL |     VM(dyn Foo),
   |        ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn Foo + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn Bar + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:55:8
   |
LL |     VN{x: dyn Bar},
   |        ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn Bar + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn FooBar + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:57:15
   |
LL |     VO(isize, dyn FooBar),
   |               ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn FooBar + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn BarFoo + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:59:18
   |
LL |     VP{u: isize, x: dyn BarFoo},
   |                  ^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn BarFoo + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[i8]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:63:8
   |
LL |     VQ(<&'static [i8] as Deref>::Target),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[i8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[char]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:65:8
   |
LL |     VR{x: <&'static [char] as Deref>::Target},
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[char]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[f64]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:67:15
   |
LL |     VS(isize, <&'static [f64] as Deref>::Target),
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[f64]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:69:18
   |
LL |     VT{u: isize, x: <&'static [i32] as Deref>::Target},
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[i32]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn PathHelper1 + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:43:8
   |
LL |     VI(Path1),
   |        ^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Path1`, the trait `std::marker::Sized` is not implemented for `(dyn PathHelper1 + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `Path1`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn PathHelper2 + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:45:8
   |
LL |     VJ{x: Path2},
   |        ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Path2`, the trait `std::marker::Sized` is not implemented for `(dyn PathHelper2 + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `Path2`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn PathHelper3 + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:47:15
   |
LL |     VK(isize, Path3),
   |               ^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Path3`, the trait `std::marker::Sized` is not implemented for `(dyn PathHelper3 + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `Path3`
   = note: no field of an enum variant may have a dynamically sized type

error[E0277]: the size for values of type `(dyn PathHelper4 + 'static)` cannot be known at compilation time
  --> $DIR/unsized-enum2.rs:49:18
   |
LL |     VL{u: isize, x: Path4},
   |                  ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Path4`, the trait `std::marker::Sized` is not implemented for `(dyn PathHelper4 + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `Path4`
   = note: no field of an enum variant may have a dynamically sized type

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0277`.
